add some code and a picture in project to active preview function in LinkedIn

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html >
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
+    <!-- meta tags for LinkedIn -->
+    <meta property="og:title" content="Howard's Demo Site (React App)" />
+    <meta name="image" property="og:image" content="InThumbnail/component_demo_site.png" />
+    <meta name="author" content="Howard Shou" />
+    <meta property="og:description"
+      content="This project is a place where I record something I feel interested in, which is constructed by CRA and Material UI, implement functional component with react hooks, linter, code split, and so on." />
+    <meta property="og:url" content="https://howardshou.github.io/real-life-project-react/" />
+    <!--  -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="minimum-scale=1, width=device-width, initial-scale=1" />
